# mdverse_residue_database

./: LICENSE  README.md  parse_gromacs_files.py  pyproject.toml  residues_database_stats  residues_database_stats.py
results/: residue_database.json
src/mdverse_residue_database/: __init__.py  parsing_tools.py
