[project]
name = "mdverse-residue-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
    "logger>=1.4",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdverse_residue_database"]   

[tool.uv.sources]
mdverse-residue-database = { path = ".", editable = true }
